--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -27,6 +27,7 @@ body {
   font-style: normal;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 h1 {
   margin-bottom: 0;
